<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.derl.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/my_title"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/button"
        style="@style/ButtonStyle"
        android:layout_below="@+id/title"
        android:layout_marginTop="32dp"
        android:text="@string/spotify_streamer"
        android:onClick="spotifyStreamer"/>

    <Button
        android:id="@+id/button2"
        style="@style/ButtonStyle"
        android:layout_below="@+id/button"
        android:text="@string/super_duo1"
        android:onClick="superDuo1"/>

    <Button
        android:id="@+id/button3"
        style="@style/ButtonStyle"
        android:layout_below="@+id/button2"
        android:text="@string/super_duo2"
        android:onClick="superDuo2"/>

    <Button
        android:id="@+id/button4"
        style="@style/ButtonStyle"
        android:layout_below="@+id/button3"
        android:text="@string/build_it_bigger"
        android:onClick="buildItBigger"/>

    <Button
        android:id="@+id/button5"
        style="@style/ButtonStyle"
        android:layout_below="@+id/button4"
        android:text="@string/materialize"
        android:onClick="xyzReader"/>

    <Button
        android:id="@+id/button6"
        style="@style/ButtonStyle"
        android:layout_below="@+id/button5"
        android:text="@string/capstone"
        android:onClick="capstone"
        android:background="@android:color/holo_red_light"/>


</RelativeLayout>
